# shared_control_hardware_interface

./: CMakeLists.txt  SharedControlHardwareInterface.cmake.in  install.sh
include/shared_control_hardware_interface/: common_defs.hpp  controller_interface.hpp  hardware_interface.hpp  ipc_handler.hpp  joint.hpp  utils.hpp
src/: ipc_handler.cpp  joint.cpp
test/: CMakeLists.txt
test/ipc_handler_test/: CMakeLists.txt  config.yaml  ctrl.cpp  hwi.cpp
